# Hackathon-2025.backend

./: .dockerignore  .gitignore  Dockerfile  DockerfileDev  LICENSE  manage.py  pyproject.toml  requirements.txt
api/: admin.py  containers.py  models.py  serializers.py  urls.py  views.py
api/ai/: __init__.py  mentor.py  model.py  news_fetcher.py
api/management/commands/: ensure_admin_user.py
api/migrations/: 0001_initial.py  0002_alter_chat_options_alter_course_options_and_more.py  0003_delete_chat_delete_course_delete_message_and_more.py
app/: settings.py
app/app/: settings.py
shared/: config.py  utils.py
