[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "dotenv>=0.9.9",
    "django-cors-headers~=4.9.0",
    "djangorestframework~=3.16.1",
    "djangorestframework-camel-case~=1.4.2",
]
