[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "dotenv>=0.9.9",
    "django-cors-headers~=4.9.0",
    "djangorestframework~=3.16.1",
    "djangorestframework-camel-case~=1.4.2",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "pypdf2>=3.0.0",
    "tiktoken>=0.5.0",
    "chromadb>=0.4.0",
    "psycopg2-binary~=2.9.11",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",  # for PDF processing
    "tiktoken>=0.5.0",  # for token counting
    "chromadb>=0.4.0",  # vector store for resources
]
